Change loader image and fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -3022,7 +3022,7 @@ span.teaser {
 }
 .preloader-image {
     width: 100%;
-    padding: 10%
+    padding: 0%
 }
 .preloader1 {
     width: 60px;
@@ -5945,6 +5945,7 @@ section.no-padding {
 .banner {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     z-index: 100;
